--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexandraws Web Development</title>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jost&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -25,6 +28,14 @@
            </li>
         </ul>
     </header>
+
+    <!-- Hero section -->
+    <div class="hero">
+        <img class="hero-img" src="/images/hero-img.jpg" alt="sunset over a blue lake surrounded by forest pines" style="width: 100%;">
+        <h2 class="bottom-right">
+            Creative designs for any webpage!
+        </h2>
+    </div>
 
     <!-- About Me Section -->
     <section>
