added and styled contact me section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,22 @@
 
 
     <!-- Contact Me Section -->
-    <section>
-        <h2>Contact Me</h2>
+    <section id="contact" class="contact">
+        <div class="grid-container">
+            <h2 class="section-3">Contact Me</h2>
+            <ul class="contact-info">
+                <li>
+                    <a href="tel:+1-512-375-1512">512-375-1512</a>
+                </li>
+                <li>
+                    <a href="https://github.com/alexandraws29" target="blank">GitHub</a>
+                </li>
+                <li>
+                    <a href="mailto: abc@example.com">alexandraws29@outlook.com</a>
+                </li>
+            </ul>
+
+        </div>    
     </section>
 </div>
     
