attempt at fixing images for live

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <!-- Hero Picture With Subtitle -->
     <div class="hero">
-        <img class="hero-img" src="/images/hero-img.jpg" alt="sunset over a blue lake surrounded by forest pines" style="width: 100%;">
+        <img class="hero-img" src="./images/hero-img.jpg" alt="sunset over a blue lake surrounded by forest pines" style="width: 100%;">
         <h2 class="bottom-right">
             Creative designs for any webpage!
         </h2>
@@ -47,34 +47,34 @@
                 <br />
                  I am a quick learner and a hard worker. The combination of these two skills are going to help me achieve my dreams, and you can help! Just take a look at the projects that I have completed in the Work section. If you like what you see then contact me using the information at the bottom of the page and you can hire me for your own website! If you aren’t currently in need of a website then just keep me in mind, and the next time you hear about someone in need of one, you can give them my information. I appreciate the time you are taking to check out my work! <span>Enjoy!</span>
                 </p>
-                <img src="/images/professional-face.jpg" alt="the author">
+                <img src="./images/professional-face.jpg" alt="the author">
             </div>
         </section>
         <!-- Previous Work Section -->
             <div id="work" class="grid-container">
                 <h2 class="section-2">Work</h2>
-                <div class="grid-item first" style="background-image: url(/images/modern-coding.jpg);">
+                <div class="grid-item first" style="background-image: url(./images/modern-coding.jpg);">
                     <h3 class="bottom-right">
                         Work in Progress!
                     </h3>
                 </div>
-                <div class="grid-item" style="background-image: url(/images/code.jpg)">
+                <div class="grid-item" style="background-image: url(./images/code.jpg)">
                     <h3 class="bottom-right">
                         Work in Progress!
                     </h3>
                 </div>
-                <div class="grid-item" style="background-image: url(/images/group-page.jpg)">
+                <div class="grid-item" style="background-image: url(./images/group-page.jpg)">
                     <h3 class="bottom-right">
                         Work in Progress!
                     </h3>
                 </div>
-                <div class="grid-item" style="background-image: url(/images/professional-developer.jpg)">
+                <div class="grid-item" style="background-image: url(./images/professional-developer.jpg)">
                     <h3 class="bottom-right">
                         Work in Progress!
                     </h3>
                 </div>
 
-                <div class="grid-item" style="background-image: url(/images/sleak-screen.jpg)">
+                <div class="grid-item" style="background-image: url(./images/sleak-screen.jpg)">
                     <h3 class="bottom-right">
                         Work in Progress!
                     </h3>
