--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
         <!-- Previous Work Section -->
             <div id="work" class="grid-container">
                 <h2 class="section-2">Work</h2>
-                <div class="grid-item first" style="background-image: url(./images/modern-coding.jpg);">
+                <div class="grid-item first" style="background-image: url(./images/recipeRoundup.JPG);">
                     <h3 class="bottom-right">
-                        Work in Progress!
+                        Recipe Roundup
+                        <br>
+                        A website dedicated to help you find the perfect recipe!
                     </h3>
                 </div>
                 <div class="grid-item" style="background-image: url(./images/code.jpg)">
