added second item to previous work section

--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
                 <h2 class="section-2">Work</h2>
                 <div class="grid-item first" style="background-image: url(./images/recipeRoundup.JPG);">
                     <h3 class="bottom-right">
-                        Recipe Roundup
-                        <br>
-                        A website dedicated to help you find the perfect recipe!
+                        <a target="_blank" href="https://alexandraws29.github.io/Recipe-Finder/">Recipe Roundup</a> 
+                        
                     </h3>
                 </div>
-                <div class="grid-item" style="background-image: url(./images/code.jpg)">
+                <div class="grid-item" style="background-image: url(./images/put-a-ring-on-it.JPG)">
                     <h3 class="bottom-right">
-                        Work in Progress!
+                        <a target="_blank" href="http://put-a-ring-on-it.herokuapp.com/">Put A Ring On It!</a> 
                     </h3>
                 </div>
                 <div class="grid-item" style="background-image: url(./images/group-page.jpg)">
