--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="grid-item" style="background-image: url(./images/group-page.jpg)">
                     <h3 class="bottom-right">
-                        Work in Progress!
+                        <a target="_blank" href="https://pure-springs-79722.herokuapp.com/">TekTalk</a> 
                     </h3>
                 </div>
                 <div class="grid-item" style="background-image: url(./images/professional-developer.jpg)">
